--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "grunt-jscs": "^3.0.1",
     "grunt-mocha-test": "^0.13.2",
     "load-grunt-tasks": "^3.5.2",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "sinon": "^2.0.0"
   },
   "dependencies": {
     "lodash": ">=2.0.0"
